## next
[update] removed unused and incorrect text aliases for specifying ds-rdata digest/algorithm
[query] fixed verbose help for route-set member: attribute

## 1.67.3
[all] Added support for graceful shutdown for layer 2 load balancers
[query] Configure a list of default sources to query (contributed by APNIC)
[all] Whois REST API has /whois root URI

## 1.67.2
[api] /grs-search and /grs-lookup removed
[api] tags included in /search
[api] completing rest api documentation
[update] disable diff keyword for this release
[update] disable pending updates for this release
[update] generated changed attribute value shown in notification and dry-run

## 1.67.1
[api] support for long options
[update] reserved words for mntner attributes no longer allowed
[query] --show-version and -B cannot be used together
[query] filter auth and email attributes from --diff-versions output
[all] added maintenance mode (-Dmaintenance=none,none)
[all] fixes for index regeneration (pre-production tests)
[query] All GRS sources are now filtered on AuthoritativeResource regardless of --resource flag
[query] --resource now enables --no-referenced by default

## 1.67 (not yet deployed)
[update] added pending auth support for route(6) creation
[update] added dry-run support for a single object update via the 'dry-run: reason' pseudo-attribute
[update] display diff instead of original object in update notifications
[query] added svn-style diff support option '--diff-versions n:m'
[all] added JMX call for online regeneration of index tables
[all] dropped fallbacks in failed index lookup; need to regenerate indexes on deployment!

## 1.66.3 (deployed on 2013-06-05)
[query] --all-sources now correctly returns results from RIPE + (all GRS except RIPE-GRS)

## 1.66.2
[update] added validation for incoming email addresses
[api] moved api doc root from / to /api-doc

## 1.66
[nrtm] added nrtm client to allow users run a local copy of the RIPE DB